--- a/web/templates/vinculacion/actividades.html
+++ b/web/templates/vinculacion/actividades.html
@@ -34,7 +34,7 @@
             <div role="tablist" aria-multiselectable="true" id="accordion-1" class="panel-group accordion offset-top-0">
               <div class="panel panel-default">
                 <div role="tab" id="headingOne" class="panel-heading">
-                  <div class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" href="#collapseOne" aria-expanded="true" class="collapsed">Según grupos de interés</a></div>
+                  <div class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" href="#collapseOne" aria-expanded="true" class="collapsed">Actividades de vinculación según grupos de interés</a></div>
                 </div>
 
                 <div role="tabpanel" aria-labelledby="headingOne" id="collapseOne" class="panel-collapse collapse">
@@ -47,7 +47,7 @@
                             <hr class="text-subline">
                         </div>
                         <div class="offset-top-30">
-                          <table data-responsive="true" class="table table-custom table-primary table-fixed" style="text-align:justify">
+                          <table data-responsive="true" class="table table-custom table-primary table-fixed" style="text-align:justify" width="80%">
                             <tr>
                               <th width="1%" style="text-aling:center !important;">#</th>
                               <th width="16%" style="text-aling:center !important; text-transform: uppercase;">Actividad</th>
@@ -80,14 +80,6 @@
                               <td></td>
                               <td></td>
                             </tr>
-                            <tr>
-                              <td>n</td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                            </tr>
                           </table>
                         </div>
                     </div> <!-- offset-top-20 -->
@@ -97,7 +89,7 @@
 
               <div class="panel panel-default">
                 <div role="tab" id="headingTwo" class="panel-heading">
-                  <div class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" href="#collapseTwo" aria-expanded="true" class="collapsed">De tipo científico y productivo.</a></div>
+                  <div class="panel-title"><a role="button" data-toggle="collapse" data-parent="#accordion-1" href="#collapseTwo" aria-expanded="true" class="collapsed">	Actividades de vinculación de tipo científico y productivo</a></div>
                 </div>
                 <div role="tabpanel" aria-labelledby="headingTwo" id="collapseTwo" class="panel-collapse collapse">
                   <div class="panel-body" style="background-color: #FFFFFF !important; color: #000000 !important">
@@ -223,41 +215,33 @@
                 </div> <!-- role="tabpanel" -->
               </div> <!-- class="panel panel-default" -->
 
-              <div class="offset-top-90 offset-md-top-110" style="center">
-                  <h6>Número de beneficiarios en clínicas odontológicas durante el periodo 2016-2020*</h6>
-                  <div class="offset-top-10">
-                      <hr class="text-subline">
-                  </div>
-                  <div class="offset-top-30">
-                      <!-- Classic Responsive Table-->
-                      <table data-responsive="true" class="table table-custom table-primary table-fixed" style="width:60%">
-                        <tr>
-                            <td style="background: #4eaad7;color: #fff;border-top-color: #4eaad7;" width="25%">Años</td>
-                            <td width="15%">2016</td>
-                            <td width="15%">2017</td>
-                            <td width="15%">2018</td>
-                            <td width="15%">2019</td>
-                            <td width="15%">2020 **</td>
-                        </tr>
-                        <tr>
-                            <td style="background: #4eaad7;color: #fff;border-top-color: #4eaad7; font-weight: bold;" width="30%">Beneficiarios</td>
-                            <td>1132</td>
-                            <td>1901</td>
-                            <td>2147</td>
-                            <td>2358</td>
-                            <td>104</td>
-                        </tr>
-                        <tr>
-                          <td colspan="6"> *Cifra entregada en informes semestrales de fichas clínicas. <br>**Cifra consolidada de prestaciones al 28/09/2020.</td>
-                        </tr>
-                      </table>
-                  </div>
+              <div class="offset-top-60 offset-md-top-60">
+                <h6>Número de beneficiarios en clínicas odontológicas durante el periodo 2016-2020*</h6>
+                <div class="offset-top-10">
+                    <hr class="text-subline">
+                </div>
+                <div class="offset-top-60">
+                    <table data-responsive="true" class="table table-custom table-primary table-fixed" style="width:70%">
+                      <tr>
+                        <th style="width="25%">Años</th>
+                        <th width="15%">2016</th>
+                        <th width="15%">2017</th>
+                        <th width="15%">2018</th>
+                        <th width="15%">2019</th>
+                        <th width="15%">2020**</th>
+                      </tr>
+                      <tr>
+                        <td>Beneficiarios</td>
+                        <td>1132</td>
+                        <td>1901</td>
+                        <td>2147</td>
+                        <td>2358</td>
+                        <td>104</td>
+                      </tr>
+                    </table>
+                    <p>* Cifra entregada en informes semestrales de fichas clínicas.<br>** Cifra consolidada de prestaciones al 28/09/2020.</p>
+                </div>
               </div>
-
-
-
-
-
 
             </div>
           </div>
