--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -260,7 +260,46 @@ div#instagram_section div.img-overlay i.fa-instagram {
 /* Actividad */
 
 article.post.post-modern.post-modern-classic.post-modern-classic-full {
-  margin-bottom: 20px;
+    margin-bottom: 40px;
+}
+
+/* Video index */
+
+section.marco-video iframe{
+    width: 100%;
+    height: 300px;
+}
+
+section.marco-video p.msg{
+    padding: 15px;
+}
+
+section.marco-video span.fa-quote-left{
+    margin-right: 5px;
+}
+
+section.marco-video span.fa-quote-right{
+    margin-left: 5px;
+}
+
+section.section-100-up{
+    padding-top: 100px;
+}
+
+section.section-150-up{
+    padding-top: 150px;
+}
+
+section.section-100-down{
+    padding-bottom: 100px;
+}
+
+section.section-70-up{
+    padding-top: 70px;
+}
+
+section.section-30-down{
+    padding-bottom: 30px;
 }
 
 
