--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -268,10 +268,19 @@ article.post.post-modern.post-modern-classic.post-modern-classic-full {
 section.marco-video iframe{
     width: 100%;
     height: 300px;
+    padding: 10px 10px 10px 0px;
+    border-left: 1px solid #f2f2f4;
+    border-right: 1px solid #f2f2f4;
+    border-top: 1px solid #f2f2f4;
 }
 
 section.marco-video p.msg{
     padding: 15px;
+    font-size: 16px;
+    height: 150px;
+    border-left: 1px solid #f2f2f4;
+    border-right: 1px solid #f2f2f4;
+    border-bottom: 1px solid #f2f2f4;
 }
 
 section.marco-video span.fa-quote-left{
