--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -268,21 +268,29 @@ article.post.post-modern.post-modern-classic.post-modern-classic-full {
 section.marco-video iframe{
     width: 100%;
     height: 300px;
+    padding: 10px 10px 0px 10px;
+    border-left: 1px solid #f2f2f2;
+    border-right: 1px solid #f2f2f2;
+    border-top: 1px solid #f2f2f2;
 }
 
 section.marco-video p.msg{
     padding: 15px;
     font-size: 16px;
     height: 150px;
-    border: 1px solid #f2f2f4;
+    border-left: 1px solid #f2f2f2;
+    border-right: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 section.marco-video span.fa-quote-left{
     margin-right: 5px;
+    color: #dedede;
 }
 
 section.marco-video span.fa-quote-right{
     margin-left: 5px;
+    color: #dedede;
 }
 
 section.section-100-up{
